implemented flat programmTree